# ChangeLog for sys-kernel/gentoo-sources
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1321 2014/05/17 04:16:31 jer Exp $

  17 May 2014; Jeroen Roovers <jer@gentoo.org> gentoo-sources-3.12.20.ebuild:
  Stable for HPPA (bug #509840).

*gentoo-sources-3.2.58-r2 (16 May 2014)
*gentoo-sources-3.4.90-r2 (16 May 2014)

  16 May 2014; Tom Wijsman <TomWij@gentoo.org> +gentoo-sources-3.2.58-r2.ebuild,
  +gentoo-sources-3.4.90-r2.ebuild, -gentoo-sources-3.2.58-r1.ebuild,
  -gentoo-sources-3.4.90-r1.ebuild:
  Revision bumps 3.2.58-r2 and 3.4.90-r2; fixed broken backports by using the
  CVE-2014-0196 patch from the stable queue for branches 3.2 and 3.4, such that
  users can continue to use these branches.

  16 May 2014; Jeroen Roovers <jer@gentoo.org> gentoo-sources-3.10.40.ebuild:
  Stable for HPPA (bug #509840).

*gentoo-sources-3.4.90-r1 (16 May 2014)
*gentoo-sources-3.2.58-r1 (16 May 2014)

  16 May 2014; Tom Wijsman <TomWij@gentoo.org> +gentoo-sources-3.2.58-r1.ebuild,
  +gentoo-sources-3.4.90-r1.ebuild:
  Revision bump 3.2.58, 3.4.90; include a fix for CVE-2014-0196.

*gentoo-sources-3.12.20 (16 May 2014)

  16 May 2014; Tom Wijsman <TomWij@gentoo.org> +gentoo-sources-3.12.20.ebuild:
  Linux patch 3.12.20.

*gentoo-sources-3.4.90 (15 May 2014)

  15 May 2014; Tom Wijsman <TomWij@gentoo.org> +gentoo-sources-3.4.90.ebuild:
  Linux patch 3.4.90.

*gentoo-sources-3.10.40 (13 May 2014)

  13 May 2014; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.10.40.ebuild:
  Linux patch 3.10.40

*gentoo-sources-3.14.4 (13 May 2014)

  13 May 2014; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.14.4.ebuild:
  Linux patch 3.14.4

*gentoo-sources-3.12.19 (09 May 2014)

  09 May 2014; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.12.19.ebuild:
  Linux patch 3.12.19

  07 May 2014; Mike Pagano <mpagano@gentoo.org> -gentoo-sources-3.2.55.ebuild,